Image validation and beginning of standardized upload process

--- a/tradekraft-microservice/src/main/resources/application.properties
+++ b/tradekraft-microservice/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 # JPA
 spring.datasource.driver-class-name = org.postgresql.Driver
 
-flyway.enabled=false
+flyway.enabled = false
+
+#File Configuration
+spring.http.multipart.maxFileSize = 50MB
+spring.http.multipart.maxRequestSize = 50MB
