--- a/tradekraft-microservice/pom.xml
+++ b/tradekraft-microservice/pom.xml
@@ -153,5 +153,11 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>[0.4, 0.5)</version>
+        </dependency>
     </dependencies>
 </project>
