--- a/tradekraft-microservice/pom.xml
+++ b/tradekraft-microservice/pom.xml
@@ -138,6 +138,12 @@
             <version>2.1.9</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>com.github.fge</groupId>-->
+            <!--<artifactId>json-patch</artifactId>-->
+            <!--<version>1.9</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-aws-context</artifactId>
@@ -164,6 +170,12 @@
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
             <version>[0.4, 0.5)</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.tradekraftcollective</groupId>
+            <artifactId>jsonpatch</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
