--- a/tradekraft-microservice/pom.xml
+++ b/tradekraft-microservice/pom.xml
@@ -138,12 +138,6 @@
             <version>2.1.9</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.github.fge</groupId>-->
-            <!--<artifactId>json-patch</artifactId>-->
-            <!--<version>1.9</version>-->
-        <!--</dependency>-->
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-aws-context</artifactId>
@@ -170,6 +164,16 @@
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
             <version>[0.4, 0.5)</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
         </dependency>
 
         <dependency>
